// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blocks Can return aggregated data 1`] = `
Object {
  "blocks": Array [
    Object {
      "number": 29021,
      "transactions_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "fee": 171158,
            "size": 218,
            "totalOutput": 2846601153795,
          },
          "count": "2",
          "max": Object {
            "fee": "171246",
            "size": "220",
            "totalOutput": "4924799478660",
          },
          "min": Object {
            "fee": "171070",
            "size": "216",
            "totalOutput": "768402828930",
          },
          "sum": Object {
            "fee": "342316",
            "size": "436",
            "totalOutput": "5693202307590",
          },
        },
      },
    },
  ],
}
`;

exports[`blocks Can return blocks by number 1`] = `
Object {
  "blocks": Array [
    Object {
      "hash": "bf13d9a80ad99a4f34edb8a3262dd8120e29bbe182732cd3b00bf3d1bb7c2380",
    },
  ],
}
`;

exports[`blocks Can return filtered aggregated data 1`] = `
Object {
  "blocks": Array [
    Object {
      "number": 29021,
      "transactions_aggregate": Object {
        "aggregate": Object {
          "count": "2",
        },
      },
    },
  ],
}
`;

exports[`blocks are linked to their predecessor, and the chain can be traversed 1`] = `
Object {
  "blocks": Array [
    Object {
      "hash": "bf13d9a80ad99a4f34edb8a3262dd8120e29bbe182732cd3b00bf3d1bb7c2380",
      "previousBlock": Object {
        "number": 29021,
        "previousBlock": Object {
          "number": 29020,
          "previousBlock": Object {
            "number": 29019,
          },
        },
      },
    },
  ],
}
`;

exports[`blocks are linked to their successor, and the chain can be traversed 1`] = `
Object {
  "blocks": Array [
    Object {
      "hash": "bf13d9a80ad99a4f34edb8a3262dd8120e29bbe182732cd3b00bf3d1bb7c2380",
      "nextBlock": Object {
        "nextBlock": Object {
          "nextBlock": Object {
            "number": 29025,
          },
          "number": 29024,
        },
        "number": 29023,
      },
    },
  ],
}
`;

exports[`cardano Returns static information about the network 1`] = `
Object {
  "cardano": Object {
    "networkName": "mainnet",
    "protocolConst": 2160,
    "slotDuration": 20000,
    "startTime": "2017-09-23T21:44:51",
  },
}
`;

exports[`epochs Can return aggregated Epoch data 1`] = `
Object {
  "epochs_aggregate": Object {
    "aggregate": Object {
      "count": "185",
      "max": Object {
        "number": 184,
        "output": "424616166073756860",
        "transactionsCount": "40972",
      },
      "min": Object {
        "output": "2654692166740613",
        "transactionsCount": "33",
      },
      "sum": Object {
        "output": "8293029495565297000",
        "transactionsCount": "1938088",
      },
    },
  },
}
`;

exports[`epochs Can return aggregated data 1`] = `
Object {
  "epochs": Array [
    Object {
      "blocksCount": "21589",
      "blocks_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "fees": 47848.56538051786,
            "size": 838.0591968131919,
          },
          "count": "21589",
          "max": Object {
            "fees": "1377042",
            "size": "4787",
          },
          "min": Object {
            "fees": "0",
            "size": "631",
          },
          "sum": Object {
            "fees": "1033002678",
            "size": "18092860",
          },
        },
      },
      "number": 1,
    },
  ],
}
`;

exports[`epochs Can return filtered aggregated data 1`] = `
Object {
  "epochs": Array [
    Object {
      "blocks_aggregate": Object {
        "aggregate": Object {
          "count": "3075",
        },
      },
      "number": 1,
    },
  ],
}
`;

exports[`epochs Returns epoch details by number 1`] = `
Object {
  "epochs": Array [
    Object {
      "blocksCount": "21589",
      "lastBlockTime": "2017-10-03T21:43:51",
      "number": 1,
      "output": "101402912214214220",
      "startedAt": "2017-09-28T21:45:51",
      "transactionsCount": "12870",
    },
  ],
}
`;

exports[`epochs Returns epoch details by number range 1`] = `
Object {
  "epochs": Array [
    Object {
      "blocksCount": "21589",
      "lastBlockTime": "2017-10-03T21:43:51",
      "number": 1,
      "output": "101402912214214220",
      "startedAt": "2017-09-28T21:45:51",
      "transactionsCount": "12870",
    },
  ],
}
`;

exports[`transactions Can return aggregated data 1`] = `
Object {
  "transactions": Array [
    Object {
      "fee": 171246,
      "hash": "05ad8b467095e0886713a38231ab9fe84e4031a433a9400ebf70ec9415e20102",
      "inputs_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "value": "4924799649906",
          },
          "count": "1",
          "max": Object {
            "value": "4924799649906",
          },
          "min": Object {
            "value": "4924799649906",
          },
          "sum": Object {
            "value": "4924799649906",
          },
        },
      },
      "outputs_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "value": "2462399739330",
          },
          "count": "2",
          "max": Object {
            "value": "4824799478660",
          },
          "min": Object {
            "value": "100000000000",
          },
          "sum": Object {
            "value": "4924799478660",
          },
        },
      },
    },
    Object {
      "fee": 171070,
      "hash": "e680432562b3b71fe44ca4eb8e29cb181d3a0858b3e2a643a55f7513d901bcae",
      "inputs_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "value": "768403000000",
          },
          "count": "1",
          "max": Object {
            "value": "768403000000",
          },
          "min": Object {
            "value": "768403000000",
          },
          "sum": Object {
            "value": "768403000000",
          },
        },
      },
      "outputs_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "value": "384201414465",
          },
          "count": "2",
          "max": Object {
            "value": "768401828930",
          },
          "min": Object {
            "value": "1000000",
          },
          "sum": Object {
            "value": "768402828930",
          },
        },
      },
    },
  ],
}
`;

exports[`transactions Can return filtered aggregated data 1`] = `
Object {
  "transactions": Array [
    Object {
      "hash": "e680432562b3b71fe44ca4eb8e29cb181d3a0858b3e2a643a55f7513d901bcae",
      "inputs_aggregate": Object {
        "aggregate": Object {
          "count": "1",
        },
      },
      "outputs_aggregate": Object {
        "aggregate": Object {
          "count": "1",
        },
      },
    },
  ],
}
`;

exports[`transactions Returns transactions by hashes 1`] = `
Object {
  "transactions": Array [
    Object {
      "block": Object {
        "number": 29021,
      },
      "fee": 171246,
      "hash": "05ad8b467095e0886713a38231ab9fe84e4031a433a9400ebf70ec9415e20102",
      "inputs": Array [
        Object {
          "address": "DdzFFzCqrht5ExAdoZVExXoZTpoMYGKxva3thvvvHapsLZQzSX3kCqwgqi5NSM2oUtHYYDqsSnvSGbqkarB6cSgDZohUhLWZ9KFdDWsa",
          "index": 0,
          "value": "4924799649906",
        },
      ],
      "outputs": Array [
        Object {
          "address": "DdzFFzCqrhsxVv8Sjuj35Zkw42T9WjwXa6DasrNknm5M3bPVDnWJWwhX5NymoZncUArTfFYZ9sYGaA9htKSNYoK5Vkzx2vUtunAFt3eE",
          "index": 0,
          "value": "4824799478660",
        },
        Object {
          "address": "DdzFFzCqrhskotfhVwhLvNFaVGpA6C4yR9DXe56oEL4Ewmze51f1uQsc1cQb8qUyqgzjUPBgFZiVbuQu7BaXrQkouyvzjYjLqfJpKG5s",
          "index": 1,
          "value": "100000000000",
        },
      ],
      "size": 220,
      "totalOutput": "4924799478660",
    },
    Object {
      "block": Object {
        "number": 29021,
      },
      "fee": 171070,
      "hash": "e680432562b3b71fe44ca4eb8e29cb181d3a0858b3e2a643a55f7513d901bcae",
      "inputs": Array [
        Object {
          "address": "DdzFFzCqrhsggyaAMAUTjGtjBr1CTp8tTcHYWbqtoyQBZcaYHM16rjbUDawTwoVaEPawAMPLJmpJVXHBNxZnTgmQzqAcNDe6XvMe5BkB",
          "index": 0,
          "value": "768403000000",
        },
      ],
      "outputs": Array [
        Object {
          "address": "DdzFFzCqrhsuz652nVpjktdtiV44uWJLHv83m61S33gzfB4TBx7SKp3DgM18fBJznMrbUdsEFEvXW4LYqVKFE9fjMgVhmJP2LBhUvEe8",
          "index": 0,
          "value": "768401828930",
        },
        Object {
          "address": "DdzFFzCqrhsgrGt7zHydkE4cKxjB7SgsdnMPUFxYEwBu1u4sGobxZL5Xo3eDycCrtSYAUyw9aAsZZxFpTdgur6MwYDYMwAZ4xNGKRD3o",
          "index": 1,
          "value": "1000000",
        },
      ],
      "size": 216,
      "totalOutput": "768402828930",
    },
  ],
}
`;
